gitops/espresso/apps/searxng/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: searxng
  labels:
    pod-security.kubernetes.io/enforce: restricted
