gitops/espresso/apps/searxng/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: searxng
  namespace: searxng
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - search.asgard.michaelbrusegard.com
  rules:
    - backendRefs:
        - name: searxng
          port: 8080
